# resistor-divider

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md
ResistorDivider/: ResistorDivider.h
cmake/toolchains/: Clang.cmake  MinGW.cmake  clang.cmake  gcc.cmake
parser-code/: CMakeLists.txt  parser-code.cpp  parser-code.hpp
parser-code/tests/: CMakeLists.txt  test-parser-code.cpp
resistor-divider/: CMakeLists.txt  cli.cpp  cli.hpp  cli_parser.cpp  cli_parser.hpp  main.cpp
resistor-divider-logic/: CMakeLists.txt  parser-code.cpp  rescode_parser.cpp  rescode_parser.hpp  resistor_pair.cpp  resistor_pair.hpp
resistor-divider-logic/include/resistor-divider-logic/: interface.hpp  resistor_divider_logic.hpp  resistor_pair.hpp
resistor-divider-logic/src/: e_serie_consts.hpp  interface.cpp  pairs_finder.cpp  pairs_finder.hpp  rescode_parser.cpp  rescode_parser.hpp  resistor_divider_logic.cpp  resistor_pair.cpp
resistor-divider-logic/tests/: CMakeLists.txt  test-parser-code.cpp  test_pairs_finder.cpp  test_rescode_parser.cpp  test_resistor_divider_logic.cpp  test_resistor_pair.cpp
src/: CMakeLists.txt  ResistorDivider.cpp  ResistorDivider.h  main.cpp  resistor_divider.h
tests/: CMakeLists.txt  bom_example.csv  bom_example_no_res.csv  tests.cpp
